# celox

./: .gitignore  .gitmodules  404.html  CLAUDE.md  Cargo.toml  biome.json  docker-compose.yml  four_state_test_plan.html  hashmap.json  index.html  lefthook.yml  ts_testbench_gap_analysis.html  ts_testbench_implementation_plan.html  ts_testbench_vision.html
adr/: 0001-value-change-callback-gpi-vpi.md  0002-external-modules.md  0003-temporal-logic-assertions.md  README.md
api/: index.html
assets/: api_index_classes_Simulation.md.2fWr04pY.js  api_index_classes_Simulation.md.BDbgeeDu.js  api_index_classes_Simulation.md.BG6EGvbx.js  api_index_classes_Simulation.md.BMIavGph.js  api_index_classes_Simulation.md.Ba2GVppB.js  api_index_classes_Simulation.md.Ba2GVppB.lean.js  api_index_classes_Simulation.md.BipjTUfm.js  api_index_classes_Simulation.md.BytF2h9j.js  api_index_classes_Simulation.md.C2c0q8D3.js  api_index_classes_Simulation.md.C2c0q8D3.lean.js  api_index_classes_Simulation.md.C448G-10.js  api_index_classes_Simulation.md.C4mjQsU2.js  api_index_classes_Simulation.md.C61uyrbr.js  api_index_classes_Simulation.md.CHLUwuvM.js  api_index_classes_Simulation.md.CJgArn4F.js  api_index_classes_Simulation.md.CWgPsbhC.js  api_index_classes_Simulation.md.Cc9Pztda.js  api_index_classes_Simulation.md.CcP8FYr2.js  api_index_classes_Simulation.md.CcyVaXiQ.js  api_index_classes_Simulation.md.CgLCfNv9.js  api_index_classes_Simulation.md.Cq31OMXG.js  api_index_classes_Simulation.md.CxXZLMQU.js  api_index_classes_Simulation.md.CyPcTprU.js  api_index_classes_Simulation.md.D0qrmiyT.js  api_index_classes_Simulation.md.D53xxqGy.js  api_index_classes_Simulation.md.DA9EebHD.js  api_index_classes_Simulation.md.DBPdZdp6.js  api_index_classes_Simulation.md.DRGNU634.js  api_index_classes_Simulation.md.DUQlz_xd.js  api_index_classes_Simulation.md.DUQlz_xd.lean.js  api_index_classes_Simulation.md.DVzf91yY.js  api_index_classes_Simulation.md.DWjG8OGY.js  api_index_classes_Simulation.md.Dhso08Kp.js  api_index_classes_Simulation.md.Dhso08Kp.lean.js  api_index_classes_Simulation.md.DpoWguNO.js  api_index_classes_Simulation.md.Dt0Ts5HU.js  api_index_classes_Simulation.md.DuyLRGyg.js  api_index_classes_Simulation.md.Kk6X566L.js  api_index_classes_Simulation.md.PVBEtfFc.js  api_index_classes_Simulation.md._cTtWB38.js  (+922 more)
benchmarks/: index.html
crates/celox/: Cargo.toml
crates/celox-macros/: Cargo.toml
crates/celox-napi/: Cargo.toml
crates/celox-napi/src/: layout.rs  lib.rs
crates/celox-ts-gen/: Cargo.toml
crates/celox-ts-gen/src/: generator.rs
crates/celox-ts-gen/src/snapshots/: celox_ts_gen__generator__tests__for_loop_instances_dts.snap  celox_ts_gen__generator__tests__interface_array_port_dts.snap  celox_ts_gen__generator__tests__interface_array_port_js.snap  celox_ts_gen__generator__tests__interface_array_port_md.snap  celox_ts_gen__generator__tests__interface_port_dts.snap  celox_ts_gen__generator__tests__interface_port_js.snap
crates/celox/benches/: overhead.rs  simulation.rs
crates/celox/examples/: profile_sorter.rs
crates/celox/src/: backend.rs  context_width.rs  flatting.rs  flatting_tests.rs  ir.rs  lib.rs  logic_tree.rs  optimizer.rs  parser.rs  portable.rs  serde_helpers.rs  simulation.rs  simulator.rs  vcd.rs
crates/celox/src/backend/: jit_engine.rs  memory_layout.rs  runtime.rs  wide_ops.rs
crates/celox/src/backend/translator/: arith.rs  control.rs  core.rs  memory.rs
crates/celox/src/debug/: output.rs
crates/celox/src/ir/: builder.rs
crates/celox/src/logic_tree/: comb.rs  const_inline.rs  lower.rs  range_store.rs
crates/celox/src/optimizer/: coalescing.rs
crates/celox/src/optimizer/coalescing/: block_opt.rs  cost_model.rs  pass_manager.rs  pass_optimize_blocks.rs  pass_tail_call_split.rs  shared.rs
crates/celox/src/parser/: bitaccess.rs  ff.rs  module.rs  registry.rs  scheduler.rs
crates/celox/src/parser/ff/: expression.rs  function_call.rs
crates/celox/src/simulator/: builder.rs  error.rs
crates/celox/tests/: advanced_interface.rs  array_literal.rs  basic.rs  bram_corruption.rs  compare_matrix.rs  context_width.rs  data_access.rs  duplicate_varpath.rs  error_detection.rs  error_readability.rs  fifo_issue5.rs  for_loop_unroll.rs  four_state.rs  hierarchy.rs  linear_sorter_pull.rs  nba_cross_block.rs  nba_cross_block_empty.rs  optimizer_scaling.rs  param_override.rs  parameterized_ops.rs  proto_package.rs  shared_jit_cache.rs  simulator_api.rs  sorter_tree_perf.rs  trace.rs  wide_shift_mem.rs
crates/celox/tests/fixtures/sorter_tree/: dist_entry.veryl  linear_sorter.veryl  linear_sorter_pull.veryl  min_reduction_tree.veryl  sorter_item.veryl  sorter_tree.veryl
crates/celox/tests/snapshots/: basic__mux_safe_hoisting_sir.snap  error_readability__combinational_loop_error_readability.snap  error_readability__combinational_loop_sir_error_readability.snap  error_readability__multiple_errors_readability.snap  error_readability__sv_module_unsupported_error_readability.snap  error_readability__top_not_found_error_readability.snap  false_loop__large_scc_dynamic_loop.snap  false_loop__scc_bit_cross_dependency.snap  flip_flop__benchmark_loop_sir.snap  flip_flop__store_coalescing_sir.snap
docker/: verilator.Dockerfile
docs/: ts_testbench_gap_analysis.md
guide/: celox-toml.html  combinational-loops.html  dead-store-elimination.html  four-state.html  getting-started.html  hierarchy.html  introduction.html  optimization-tuning.html  parameter-overrides.html  type-conversion.html  (+3 more)
(+80 files in other folders)
