[package]
name                  = "celox-macros"
version.workspace     = true
authors.workspace     = true
repository.workspace  = true
license.workspace     = true
description.workspace = true
edition.workspace     = true

[lib]
proc-macro = true

[dependencies]
proc-macro2       = "1.0"
quote             = "1.0"
syn               = { version = "2.0", features = ["full", "extra-traits"] }
veryl-analyzer    = { workspace = true }
veryl-metadata    = { workspace = true }
veryl-parser      = { workspace = true }
malachite-bigint  = "0.9.1"

[dev-dependencies]
prettyplease = "0.2.37"
insta        = "1.39.0"
