[package]
name                  = "celox-napi"
version.workspace     = true
authors.workspace     = true
repository.workspace  = true
license.workspace     = true
description.workspace = true
edition.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi              = { version = "3", features = ["napi8", "serde-json"] }
napi-derive       = "3"
celox             = { path = "../celox" }
celox-ts-gen      = { path = "../celox-ts-gen" }
veryl-analyzer    = { workspace = true }
veryl-metadata    = { workspace = true }
veryl-parser      = { workspace = true }
veryl-path        = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
toml              = { workspace = true }

[build-dependencies]
napi-build = "2"
