[package]
name                  = "celox-ts-gen"
version.workspace     = true
authors.workspace     = true
repository.workspace  = true
license.workspace     = true
description.workspace = true
edition.workspace     = true

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
veryl-analyzer  = { workspace = true }
veryl-parser    = { workspace = true }

[dev-dependencies]
insta           = "1.46"
veryl-metadata  = { workspace = true }
