[package]
name                  = "celox"
version.workspace     = true
authors.workspace     = true
repository.workspace  = true
license.workspace     = true
description.workspace = true
edition.workspace     = true

[dependencies]
toml                  = { workspace = true }
veryl-analyzer        = { workspace = true }
veryl-metadata        = { workspace = true }
veryl-parser          = { workspace = true }
veryl-path            = { workspace = true }
celox-macros          = { path = "../celox-macros" }
fxhash                = { workspace = true }
thiserror             = { workspace = true }
clap                  = { workspace = true }
miette                = { workspace = true }
malachite-bigint      = "0.9.1"
serde                 = { workspace = true }
num-traits            = { workspace = true }
bit-set               = { workspace = true }
itertools             = { workspace = true }
chrono                = "0.4"
cranelift             = "0.128.0"
cranelift-module      = "0.128.0"
cranelift-jit         = "0.128.0"
cranelift-frontend    = "0.128.0"
cranelift-native      = "0.128.0"

[dev-dependencies]
insta      = "1.46"
criterion  = "0.5"
proptest   = "1.10"
test-case  = "3"

[[bench]]
name = "simulation"
harness = false

[[bench]]
name = "overhead"
harness = false

[lints]
workspace = true
